Some Grease Pencil Sculpt tools break if GP object is transformed #66011

Closed
opened 2019-06-22 05:26:46 +02:00 by Sam Brubaker · 10 comments

version: 2.80 (sub 74), branch: master, commit date: 2019-06-20 22:36, hash: 197661c733, type: Release
build date: 2019-06-20, 23:27:49

GP Sculpt Bug.blend

How to reproduce:

  • Open the attached file
  • Enter sculpt mode for for each monkey

Try using the Push, Pinch, Twist, and Clone tools, specifically.

The Red Monkey is not transformed. All the tools work as expected.
The Blue Monkey is displaced. The effects of the Pinch, Twist, and Clone tools are WAY off.
The Green Monkey is rotated upside-down. This breaks the above tools, as well as the Push tool, which now works in the opposite direction.

I haven't tested it, but scaling probably breaks sculpt mode in a similar way as well.

version: 2.80 (sub 74), branch: master, commit date: 2019-06-20 22:36, hash: 197661c7334d, type: Release build date: 2019-06-20, 23:27:49 [GP Sculpt Bug.blend](https://archive.blender.org/developer/F7443846/GP_Sculpt_Bug.blend) How to reproduce: - Open the attached file - Enter sculpt mode for for each monkey # Try using the Push, Pinch, Twist, and Clone tools, specifically. The Red Monkey is not transformed. All the tools work as expected. The Blue Monkey is displaced. The effects of the Pinch, Twist, and Clone tools are WAY off. The Green Monkey is rotated upside-down. This breaks the above tools, as well as the Push tool, which now works in the opposite direction. I haven't tested it, but scaling probably breaks sculpt mode in a similar way as well.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

#66265 was marked as duplicate of this issue

#66265 was marked as duplicate of this issue
Antonio Vazquez was assigned by Sebastian Parborg 2019-06-24 11:44:50 +02:00

Added subscribers: @MadMinstrel, @zeauro

Added subscribers: @MadMinstrel, @zeauro
Author

May I elevate the priority of this bug? Sorry to do this to my own report, but 4 out of 9 sculpt tools are broken for Grease Pencil objects with a non-zero transform. This seems like a severe issue!

May I elevate the priority of this bug? Sorry to do this to my own report, but 4 out of 9 sculpt tools are broken for Grease Pencil objects with a non-zero transform. This seems like a severe issue!

I can reproduce it and I'm already working on the fix.

I can reproduce it and I'm already working on the fix.

Proposed fix here: D5245

Proposed fix here: [D5245](https://archive.blender.org/developer/D5245)

Added subscriber: @brecht

Added subscriber: @brecht

@brecht can this fix go before RC2?

@brecht can this fix go before RC2?

This issue was referenced by 8a7dedc9d2

This issue was referenced by 8a7dedc9d2951943f5826d8172280785739db6b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66011
No description provided.