Fix T66011: Transformed objects break sculpt tools

The Pinch, Push, Twist and Clone were not using the object transformation to compute point changes, so the point was way off of the right place.